--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.0.9",
     "next": "11.1.2",
+    "next-connect": "^0.10.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
