--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "axios": "^0.22.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.0.9",
     "next": "11.1.2",
