--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.22.0",
+    "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.9",
     "next": "11.1.2",
     "next-connect": "^0.10.2",
+    "notistack": "^1.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.17.2"
   },
   "devDependencies": {
     "eslint": "7.32.0",
