--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@paypal/react-paypal-js": "^7.4.1",
     "axios": "^0.22.0",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
