--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@paypal/react-paypal-js": "^7.4.1",
     "axios": "^0.22.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^3.5.1",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.9",
@@ -21,6 +22,7 @@
     "next-connect": "^0.10.2",
     "notistack": "^1.0.10",
     "react": "17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.2"
   },
