--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-chartjs-2": "^3.0.5",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.17.2",
+    "react-material-ui-carousel": "^2.3.5",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
