--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@paypal/react-paypal-js": "^7.4.1",
+    "@react-google-maps/api": "^2.5.0",
     "axios": "^0.22.0",
     "bcryptjs": "^2.4.3",
     "chart.js": "^3.5.1",
